--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "create-create-app": "^7.0.0"
   },
   "devDependencies": {
+    "shx": "^0.3.3",
     "tsup": "^4.6.1",
     "typescript": "^4.2.3"
   },
