--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
   "name": "@rocambille/create-express-app",
   "description": "Set up a modern express app by running one command.",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "author": "rocambille <rocambille@gmail.com>",
-  "homepage": "https://github.com/rocambille/create-express-app",
+  "homepage": "https://github.com/rocambille/create-express-app#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/rocambille/create-express-app.git"
+    "url": "git+https://github.com/rocambille/create-express-app.git"
   },
+  "bugs": {
+    "url": "https://github.com/rocambille/create-express-app/issues"
+  },
+  "keywords": [
+    "express",
+    "app-template",
+    "build-tools",
+    "create-app"
+  ],
   "scripts": {
     "build": "tsup src/cli.ts --minify",
     "clean": "shx rm -rf lib",
