--- a/templates/default/package.json
+++ b/templates/default/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon --exec \"npx ts-node\" -r dotenv/config index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "docker:down": "docker-compose down",
+    "docker:up": "docker-compose up -d",
+    "test": "npm run docker:up && dotenv -e .env.test npx prisma migrate deploy && dotenv -e .env.test jest -i && npm run docker:down"
   },
   "keywords": [],
   "author": "",
@@ -21,11 +23,17 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.7.10",
+    "@types/supertest": "^2.0.11",
     "@types/validatorjs": "^3.15.0",
+    "dotenv-cli": "^4.1.0",
+    "jest": "^27.3.1",
     "nodemon": "^2.0.12",
     "prisma": "^2.30.3",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   }
