--- a/templates/default/tsconfig.json
+++ b/templates/default/tsconfig.json
@@ -8,6 +8,6 @@
     "strict": true,
     "lib": ["esnext"],
     "esModuleInterop": true,
-    "typeRoots": ["./types"]
+    "typeRoots": ["./types", "./node_modules/@types"]
   }
 }
