--- a/templates/default/package.json
+++ b/templates/default/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express",
+  "name": "{{name}}",
   "version": "1.0.0",
-  "description": "",
+  "description": "{{description}}",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
@@ -11,30 +11,30 @@
     "test": "npm run docker:up && dotenv -e .env.test npx prisma migrate deploy && dotenv -e .env.test jest -i && npm run docker:down"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "{{author}} <{{email}}>",
+  "license": "{{license}}",
   "dependencies": {
-    "@prisma/client": "^2.30.3",
-    "argon2": "^0.28.2",
+    "@prisma/client": "^3.7.0",
+    "argon2": "^0.28.3",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.2",
-    "@types/jsonwebtoken": "^8.5.5",
-    "@types/node": "^16.7.10",
+    "@types/jest": "^27.0.3",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/node": "^17.0.5",
     "@types/supertest": "^2.0.11",
     "@types/validatorjs": "^3.15.0",
-    "dotenv-cli": "^4.1.0",
-    "jest": "^27.3.1",
-    "nodemon": "^2.0.12",
-    "prisma": "^2.30.3",
+    "dotenv-cli": "^4.1.1",
+    "jest": "^27.4.5",
+    "nodemon": "^2.0.15",
+    "prisma": "^3.7.0",
     "supertest": "^6.1.6",
-    "ts-jest": "^27.0.7",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.2"
+    "ts-jest": "^27.1.2",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
