--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rocambille/create-express-app",
-  "description": "Set up a modern express app by running one command.",
+  "description": "Set up a functional express app by running one command.",
   "version": "0.0.9",
   "author": "rocambille <rocambille@gmail.com>",
   "homepage": "https://github.com/rocambille/create-express-app#readme",
